--- a/speakers.html
+++ b/speakers.html
@@ -950,32 +950,6 @@
               </div>
             </div>
           </div>
-          <!-- Speaker - Bertrand Ndengeyingoma -->
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="speaker-card" data-category="technology">
-              <div class="speaker-image">
-                <img src="img/speakers/Bertrand.jpg" alt="Bertrand Ndengeyingoma" />
-                <div class="speaker-overlay">
-                  <div class="speaker-social">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                  </div>
-                </div>
-              </div>
-              <div class="speaker-info">
-                <h3>Bertrand Ndengeyingoma</h3>
-                <h4>Chief Technology & Innovation Officer, Central Bank of Rwanda</h4>
-                <p></p>
-                <a
-                  href="#"
-                  class="speaker-btn"
-                  data-toggle="modal"
-                  data-target="#speakerModalBertrandNdengeyingoma"
-                >
-                  View Profile
-                </a>
-              </div>
-            </div>
-          </div>
           <!-- Speaker - Hon. Mutesi Rusagara -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="government">
@@ -999,6 +973,32 @@
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModalMutesiRusagara"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Speaker - Hon. Nick Barigye -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="central-bank">
+              <div class="speaker-image">
+                <img src="img/speakers/DG-Nick-Barigye.jpg" alt="Hon. Nick Barigye" />
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Hon. Nick Barigye</h3>
+                <h4>Deputy Governor, National Bank of Rwanda</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalNickBarigye"
                 >
                   View Profile
                 </a>
@@ -1029,6 +1029,32 @@
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModal1"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Speaker - Bertrand Ndengeyingoma -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="technology">
+              <div class="speaker-image">
+                <img src="img/speakers/Bertrand.jpg" alt="Bertrand Ndengeyingoma" />
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Bertrand Ndengeyingoma</h3>
+                <h4>Chief Technology & Innovation Officer, Central Bank of Rwanda</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalBertrandNdengeyingoma"
                 >
                   View Profile
                 </a>
@@ -2042,32 +2068,6 @@
                 </div>
               </div>
             </div>
-            <!-- Speaker - Hon. Nick Barigye -->
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="speaker-card" data-category="central-bank">
-                <div class="speaker-image">
-                  <img src="img/speakers/DG-Nick-Barigye.jpg" alt="Hon. Nick Barigye" />
-                  <div class="speaker-overlay">
-                    <div class="speaker-social">
-                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="speaker-info">
-                  <h3>Hon. Nick Barigye</h3>
-                  <h4>Deputy Governor, National Bank of Rwanda</h4>
-                  <p></p>
-                  <a
-                    href="#"
-                    class="speaker-btn"
-                    data-toggle="modal"
-                    data-target="#speakerModalNickBarigye"
-                  >
-                    View Profile
-                  </a>
-                </div>
-              </div>
-            </div>
             <!-- Speaker - Mr. David Wainaina -->
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="speaker-card" data-category="capital-markets">
@@ -2166,6 +2166,58 @@
                     class="speaker-btn"
                     data-toggle="modal"
                     data-target="#speakerModalEdohKossi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Michael Mgwaba -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Michael Mgwaba.jpeg" alt="Michael Mgwaba" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Michael Mgwaba</h3>
+                  <h4>CEO, NewGold Issuer (RF) Limited | Head of ETP, Absa Group</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMichaelMgwaba"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Mr. Aobakwe Aupa Monyatsi -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Aobakwe.jpeg" alt="Mr. Aobakwe Aupa Monyatsi" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Mr. Aobakwe Aupa Monyatsi</h3>
+                  <h4>CEO, Botswana Stock Exchange</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalAobakweMonyatsi"
                   >
                     View Profile
                   </a>
@@ -5358,6 +5410,135 @@
                     </p>
                     <p>
                       Since July 2021, Dr Amenounve is Member of the NASDAQ Exchange Review Council and is considered as one of the most influential finance specialists in Africa.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Michael Mgwaba -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMichaelMgwaba"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Michael Mgwaba.jpeg"
+                    alt="Michael Mgwaba"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Michael Mgwaba</h3>
+                  <h4>CEO, NewGold Issuer (RF) Limited | Head of ETP, Absa Group</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Michael Mgwaba is the Chief Executive Officer for NewGold Issuer (RF) Limited and head of Exchange Traded Product business for Absa Group. He has worked with a number of Exchanges and Capital Markets to introduce ETFs as a tool to deepen those markets.
+                    </p>
+                    <p>
+                      Prior to heading the business, he was a senior manager within the product originating and structuring team of Absa's Corporate and Investment banking division for a number of years. He has served as Public Officer of Trackhedge Pty (Ltd), Trackhedge Managers Pty (Ltd), NewGold Issuer (RF) Limited, NewGold Managers Pty (Ltd) and NewFunds Pty (Ltd).
+                    </p>
+                    <p>
+                      With over 12 years' experience in the structuring, management, and distribution of ETPs, Michael has been instrumental and played a leading role in the successful introduction of two flagship ETF's in the market including world largest NewPlat ETF and the New Palladium. He also played a critical role in introducing other market leading non-commodity such as fixed income listed products in South African and some in other African markets.
+                    </p>
+                    <p>
+                      Michael currently serves as Investment Committee member for Roads Freight and Logistic Industry and Platinum Health Medical Aid Scheme. He holds a B.Com (Hons)(Acc), CSb(SA), IEDP(GIBS), and GMF(IMD Switzerland).
+                    </p>
+                    <p>
+                      <strong>Recognition:</strong> He is the 2013 ABSIP Multi Asset Manager of the Year award winner. The award was given for his instrumental role in bringing the first platinum ETF to South Africa that became the world's largest platinum ETF within 6 months following Initial Public Offer. He has been part of the team whose business has received multiple awards for more than 10 years.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Mr. Aobakwe Aupa Monyatsi -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalAobakweMonyatsi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Aobakwe.jpeg"
+                    alt="Mr. Aobakwe Aupa Monyatsi"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Mr. Aobakwe Aupa Monyatsi</h3>
+                  <h4>CEO, Botswana Stock Exchange</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Mr. Aobakwe Aupa Monyatsi, affectionately known as Aupa, is an accomplished financial market professional whose leadership, innovation, and advocacy for inclusive financial systems have earned him widespread recognition across the industry. A business leader who has earned his place on Africa's Top 100 CEOs list, a prestigious recognition by African CEO Magazine, Aupa is a finance industry giant.
+                    </p>
+                    <p>
+                      He brings over 20 years of senior management experience, with a notable career spanning Pan-African markets, financial innovation, and digital transformation. His leadership at Letshego Holdings Limited as Group Chief Executive and, previously, as Group Chief Operating Officer, saw him successfully execute and implement Letshego's Transformation Plan. This included unlocking value for stakeholders through initiatives covering products, infrastructure, and operational enhancements, as well as restructuring various assets.
+                    </p>
+                    <p>
+                      His tenure at Letshego showcased his extensive global engagements especially across Africa, deepening his understanding of the diverse financial ecosystems within the continent. He has consistently demonstrated a commitment to fostering financial inclusion and building robust frameworks for long-term growth.
+                    </p>
+                    <p>
+                      Prior to Letshego, Aupa held key leadership positions at ABSA (formerly Barclays Bank), including as Managing Executive for Virtual Channels. In this role, he consolidated digital capabilities to drive financial inclusion, showcasing his ability to combine strategic vision with impactful execution across multiple markets.
+                    </p>
+                    <p>
+                      Now in his most impactful role as the CEO of the BSE, Aupa is critical to Botswana's transformational agenda by spearheading mobilization of capital for development and supporting the transformation agenda. Central to his efforts is to democratize wealth and ownership through broad based retail investor participation. He is also at the core of driving transparency, governance and accelerating green and sustainable finance.
+                    </p>
+                    <p>
+                      He obtained his Bachelor's Degree in Accounting from the University of Botswana and several Executive Development Programmes on Leadership from various universities.
                     </p>
                   </div>
                 </div>
