--- a/speakers.html
+++ b/speakers.html
@@ -2224,6 +2224,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Laura -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="capital-markets">
+                <div class="speaker-image">
+                  <img src="img/speakers/Laura.jpeg" alt="Laura" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Laura</h3>
+                  <h4>Capital Markets Specialist</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalLaura"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -5539,6 +5565,63 @@
                     </p>
                     <p>
                       He obtained his Bachelor's Degree in Accounting from the University of Botswana and several Executive Development Programmes on Leadership from various universities.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Laura -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalLaura"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Laura.jpeg"
+                    alt="Laura"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Laura</h3>
+                  <h4>Capital Markets Specialist</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Laura has over 15 years of experience in emerging capital markets. She is a specialist in capital market reforms, and creating enabling business and investment environments.
+                    </p>
+                    <p>
+                      She has a diverse and global work experience, working in government (Ministry of Finance, Planning and Economic Development Uganda, Rwanda Development Board), implementing agencies (Rwanda Finance Ltd), regulators (Capital Markets Authority Uganda), investment banking (J.P. Morgan), development agencies (LuxDev) and as an independent consultant.
+                    </p>
+                    <p>
+                      Her passion is to make capital markets work for a sustainable future for everyone.
                     </p>
                   </div>
                 </div>
