--- a/speakers.html
+++ b/speakers.html
@@ -2228,7 +2228,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="speaker-card" data-category="capital-markets">
                 <div class="speaker-image">
-                  <img src="img/speakers/Laura.jpeg" alt="Laura" />
+                  <img src="img/speakers/Laura.jpeg" alt="Laura BIERER" />
                   <div class="speaker-overlay">
                     <div class="speaker-social">
                       <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -2236,7 +2236,7 @@
                   </div>
                 </div>
                 <div class="speaker-info">
-                  <h3>Laura</h3>
+                  <h3>Laura BIERER</h3>
                   <h4>Capital Markets Specialist</h4>
                   <p></p>
                   <a
@@ -5602,7 +5602,7 @@
                 <div class="speaker-modal-image">
                   <img
                     src="img/speakers/Laura.jpeg"
-                    alt="Laura"
+                    alt="Laura BIERER"
                   />
                 </div>
                 <div class="speaker-modal-social">
@@ -5611,7 +5611,7 @@
               </div>
               <div class="col-md-8">
                 <div class="speaker-modal-info">
-                  <h3>Laura</h3>
+                  <h3>Laura BIERER</h3>
                   <h4>Capital Markets Specialist</h4>
                   <div class="speaker-modal-bio">
                     <p>
