--- a/speakers.html
+++ b/speakers.html
@@ -2250,6 +2250,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Joseph Rono -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/JRono Profile Photo.jpeg" alt="CPA Joseph Rono" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>CPA Joseph Rono, ACSI</h3>
+                  <h4>Senior Group Executive Director, CPF Group</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalJosephRono"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -5622,6 +5648,63 @@
                     </p>
                     <p>
                       Her passion is to make capital markets work for a sustainable future for everyone.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Joseph Rono -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalJosephRono"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/JRono Profile Photo.jpeg"
+                    alt="CPA Joseph Rono"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>CPA Joseph Rono, ACSI</h3>
+                  <h4>Senior Group Executive Director, CPF Group</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Joseph Rono is a Finance and Investments professional with over 23 years' experience in private and public sectors within the East African region. He currently works for CPF Group as Senior Group Executive Director where he oversees Assets under Administration of over Kes.400 billion. He has been involved in formulation and implementation of Complex Corporate Strategies, Financial Modelling, and driving complex Investments decisions.
+                    </p>
+                    <p>
+                      Mr. Rono is a recipient of numerous awards including "Chief Investment Officer of the Year" Award at the 2017 Pension Awards and "Manager of the Year" award at the 2019 Company of the Year Awards. Rono is currently writing his thesis for PHD- Finance and holds an MBA in Finance from the University of Nairobi and BSc. Mathematics and Computer from JKUAT.
+                    </p>
+                    <p>
+                      Professionally he is Certified Public Accountant of Kenya and holds memberships to ICPAK, ICIFA and Chartered Institute for Securities and Investments (UK).
                     </p>
                   </div>
                 </div>
