--- a/speakers.html
+++ b/speakers.html
@@ -887,6 +887,32 @@
         </div>
 
         <div class="row">
+          <!-- Speaker - Hon. Murangwa Yusuf -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="government">
+              <div class="speaker-image">
+                <img src="img/speakers/Minister Yusuf.png" alt="Hon. Murangwa Yusuf" />
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Hon. Murangwa Yusuf</h3>
+                <h4>Minister of Finance and Economic Planning</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalMurangwaYusuf"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Speaker 7 -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="csd">
@@ -912,38 +938,6 @@
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModal7"
-                >
-                  View Profile
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Speaker 4 -->
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="speaker-card" data-category="regulator">
-              <div class="speaker-image">
-                <img
-                  src="img/speakers/Senhaji Tarik.jpg"
-                  alt="Dr. Sarah Alade"
-                />
-                
-                <div class="speaker-overlay">
-                  <div class="speaker-social">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-globe"></i></a>
-                  </div>
-                </div>
-              </div>
-              <div class="speaker-info">
-                <h3>Senhaji Tarik</h3>
-                <h4>CEO Cassablanca Stock Exchange and ASEA Vice-President</h4>
-                <p></p>
-                <a
-                  href="#"
-                  class="speaker-btn"
-                  data-toggle="modal"
-                  data-target="#speakerModal4"
                 >
                   View Profile
                 </a>
@@ -1055,6 +1049,39 @@
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModalBertrandNdengeyingoma"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Speaker 4 - Senhaji Tarik -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="regulator">
+              <div class="speaker-image">
+                <img
+                  src="img/speakers/Senhaji Tarik.jpg"
+                  alt="Senhaji Tarik"
+                />
+                
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Senhaji Tarik</h3>
+                <h4>CEO Cassablanca Stock Exchange and ASEA Vice-President</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal4"
                 >
                   View Profile
                 </a>
@@ -5705,6 +5732,63 @@
                     </p>
                     <p>
                       Professionally he is Certified Public Accountant of Kenya and holds memberships to ICPAK, ICIFA and Chartered Institute for Securities and Investments (UK).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Hon. Murangwa Yusuf -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMurangwaYusuf"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Minister Yusuf.png"
+                    alt="Hon. Murangwa Yusuf"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Hon. Murangwa Yusuf</h3>
+                  <h4>Minister of Finance and Economic Planning</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Mr Murangwa Yusuf is the Minister of Finance and Economic Planning. He is a professional statistician and operational researcher with over 20 years of experience in official statistics, development and national economic development. He holds a Master's Degree in Applied Statistics and Operations Research from Cardiff University.
+                    </p>
+                    <p>
+                      Until his appointment, he served as the Director General of the National Institute of Statistics of Rwanda since 2009. He also served as the Chairperson Board of Directors of Rwanda Revenue Authority and the Chairperson Board of Directors National Identification Agency.
+                    </p>
+                    <p>
+                      He has contributed to statistics development both at regional and global levels in various capacities including as the Chair of the Board of PARIS21 (Partnership for Statistics Development in 21st Century) at OECD.
                     </p>
                   </div>
                 </div>
