--- a/speakers.html
+++ b/speakers.html
@@ -2303,6 +2303,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Hannington Namara -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Hannington-Namara-1.jpg" alt="Hannington Namara" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Hannington Namara</h3>
+                  <h4>Managing Director, Equity Bank Rwanda</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalHanningtonNamara"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -5789,6 +5815,63 @@
                     </p>
                     <p>
                       He has contributed to statistics development both at regional and global levels in various capacities including as the Chair of the Board of PARIS21 (Partnership for Statistics Development in 21st Century) at OECD.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Hannington Namara -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalHanningtonNamara"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Hannington-Namara-1.jpg"
+                    alt="Hannington Namara"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Hannington Namara</h3>
+                  <h4>Managing Director, Equity Bank Rwanda</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Hannington is the Managing Director of Equity Bank Rwanda. He holds a degree in Business Administration (Finance option) from Makerere University Business School, a graduate of Advanced Management Programme from Strathmore Business School. He is a Fellow of the Africa Leadership Initiative-East Africa and a member of the Aspen Global Leadership Network.
+                    </p>
+                    <p>
+                      He has over 19 years work experience in banking and Private Sector Development with extensive knowledge and a track record in Strategic Leadership, Banking and Finance, Management and Communications.
+                    </p>
+                    <p>
+                      He has held various leadership positions while working with different reputable organizations in the past including TradeMark East Africa, Rwanda Private Sector Federation, Commercial Bank of Rwanda (BCR), Rwanda Investment Export Promotion Agency (RIEPA-now known as Rwanda Development Board). He holds several positions of responsibility in Boards of corporates and parastatals.
                     </p>
                   </div>
                 </div>
